work on updates section

--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 1,
    "id": "4f9d3be1",
    "metadata": {},
    "outputs": [],
@@ -64,18 +64,18 @@
     {
      "data": {
       "text/plain": [
-       "[{'candidate': 'hurd', 'value': 2.0816326530612246},\n",
-       " {'candidate': 'elder', 'value': 2.142857142857143},\n",
-       " {'candidate': 'suarez', 'value': 2.7755102040816326},\n",
-       " {'candidate': 'hutchinson', 'value': 3.326530612244898},\n",
-       " {'candidate': 'burgum', 'value': 3.5918367346938775},\n",
-       " {'candidate': 'christie', 'value': 5.8979591836734695},\n",
-       " {'candidate': 'scott', 'value': 6.122448979591836},\n",
-       " {'candidate': 'haley', 'value': 6.63265306122449},\n",
-       " {'candidate': 'ramaswamy', 'value': 6.673469387755102},\n",
-       " {'candidate': 'pence', 'value': 6.857142857142857},\n",
-       " {'candidate': 'desantis', 'value': 9.224489795918368},\n",
-       " {'candidate': 'trump', 'value': 10.673469387755102}]"
+       "[{'candidate': 'hurd', 'value': 2.08974358974359},\n",
+       " {'candidate': 'elder', 'value': 2.2564102564102564},\n",
+       " {'candidate': 'suarez', 'value': 2.730769230769231},\n",
+       " {'candidate': 'burgum', 'value': 3.3461538461538463},\n",
+       " {'candidate': 'hutchinson', 'value': 3.3846153846153846},\n",
+       " {'candidate': 'scott', 'value': 5.987179487179487},\n",
+       " {'candidate': 'christie', 'value': 6.256410256410256},\n",
+       " {'candidate': 'ramaswamy', 'value': 6.551282051282051},\n",
+       " {'candidate': 'haley', 'value': 6.576923076923077},\n",
+       " {'candidate': 'pence', 'value': 7.141025641025641},\n",
+       " {'candidate': 'desantis', 'value': 9.076923076923077},\n",
+       " {'candidate': 'trump', 'value': 10.602564102564102}]"
       ]
      },
      "metadata": {},
@@ -94,12 +94,12 @@
        "['hurd',\n",
        " 'elder',\n",
        " 'suarez',\n",
-       " 'hutchinson',\n",
        " 'burgum',\n",
-       " 'christie',\n",
+       " 'hutchinson',\n",
        " 'scott',\n",
-       " 'haley',\n",
+       " 'christie',\n",
        " 'ramaswamy',\n",
+       " 'haley',\n",
        " 'pence',\n",
        " 'desantis',\n",
        " 'trump']"
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "2cc50927",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
     "\n",
     "df = df.append(aggregateRow, ignore_index=True)\n",
     "\n",
-    "#df.to_csv(\"../2024/leaderboard/data/submissions2024.csv\", index=False)"
+    "df.to_csv(\"../2024/leaderboard/data/submissions2024.csv\", index=False)"
    ]
   },
   {
@@ -160,16 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "id": "5c47fa39",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "hurd      26.0\n",
-       "elder     22.0\n",
-       "suarez    18.0\n",
+       "suarez    24.358974\n",
+       "elder     21.794872\n",
+       "hurd      20.512821\n",
        "Name: 1, dtype: float64"
       ]
      },
@@ -179,9 +179,9 @@
     {
      "data": {
       "text/plain": [
-       "suarez    22.0\n",
-       "elder     22.0\n",
-       "hurd      16.0\n",
+       "elder     23.076923\n",
+       "hurd      19.230769\n",
+       "suarez    17.948718\n",
        "Name: 2, dtype: float64"
       ]
      },
@@ -191,9 +191,9 @@
     {
      "data": {
       "text/plain": [
-       "hurd      20.0\n",
-       "elder     18.0\n",
-       "suarez    16.0\n",
+       "hurd      24.358974\n",
+       "elder     15.384615\n",
+       "burgum    14.102564\n",
        "Name: 3, dtype: float64"
       ]
      },
@@ -203,9 +203,9 @@
     {
      "data": {
       "text/plain": [
-       "desantis     48.0\n",
-       "ramaswamy    16.0\n",
-       "trump        12.0\n",
+       "desantis     41.025641\n",
+       "ramaswamy    16.666667\n",
+       "trump        12.820513\n",
        "Name: 11, dtype: float64"
       ]
      },
@@ -215,9 +215,9 @@
     {
      "data": {
       "text/plain": [
-       "trump        82.0\n",
-       "desantis     10.0\n",
-       "ramaswamy     4.0\n",
+       "trump        82.051282\n",
+       "desantis     10.256410\n",
+       "ramaswamy     2.564103\n",
        "Name: 12, dtype: float64"
       ]
      },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 5,
    "id": "70f5c695",
    "metadata": {},
    "outputs": [
@@ -254,11 +254,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "66.0\n",
-      "62.0\n",
-      "62.0\n",
-      "56.00000000000001\n",
-      "18.0\n"
+      "66.66666666666666\n",
+      "64.1025641025641\n",
+      "60.256410256410255\n",
+      "56.41025641025641\n",
+      "19.230769230769234\n"
      ]
     }
    ],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 8,
    "id": "e277752c",
    "metadata": {},
    "outputs": [
@@ -287,17 +287,17 @@
      "text": [
       "% of respondents who think candidate will be one of the first three to drop out\n",
       " \n",
-      "ramaswamy: 16.0\n",
-      "hurd: 62.0\n",
-      "hutchinson: 38.0\n",
-      "elder: 62.0\n",
-      "pence: 2.0\n",
-      "christie: 14.000000000000002\n",
-      "burgum: 36.0\n",
-      "scott: 10.0\n",
-      "haley: 4.0\n",
-      "suarez: 56.00000000000001\n",
-      "trump: 0.0\n",
+      "ramaswamy: 15.384615384615385\n",
+      "hurd: 64.1025641025641\n",
+      "hutchinson: 34.61538461538461\n",
+      "elder: 60.256410256410255\n",
+      "pence: 1.282051282051282\n",
+      "christie: 11.538461538461538\n",
+      "burgum: 39.743589743589745\n",
+      "scott: 11.538461538461538\n",
+      "haley: 3.8461538461538463\n",
+      "suarez: 56.41025641025641\n",
+      "trump: 1.282051282051282\n",
       "desantis: 0.0\n"
      ]
     }
@@ -306,8 +306,8 @@
     "print(\"% of respondents who think candidate will be one of the first three to drop out\")\n",
     "print(\" \")\n",
     "\n",
-    "for candidate in reformattedData.columns:\n",
-    "    print(candidate + \": \" + str(len(reformattedData[reformattedData[candidate] <= 3]) / n * 100))"
+    "for candidate in candidatePositions.columns:\n",
+    "    print(candidate + \": \" + str(len(candidatePositions[candidatePositions[candidate] <= 3]) / n * 100))"
    ]
   },
   {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 9,
    "id": "d277ee39",
    "metadata": {},
    "outputs": [
@@ -353,62 +353,62 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>trump</td>\n",
-       "      <td>0.957036</td>\n",
+       "      <td>1.453520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>desantis</td>\n",
-       "      <td>1.519398</td>\n",
+       "      <td>1.649630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>hurd</td>\n",
-       "      <td>1.725676</td>\n",
+       "      <td>1.668547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>pence</td>\n",
-       "      <td>1.897904</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>elder</td>\n",
-       "      <td>1.944537</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>haley</td>\n",
-       "      <td>2.057936</td>\n",
+       "      <td>1.877580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>hutchinson</td>\n",
-       "      <td>2.161254</td>\n",
+       "      <td>2.007976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>suarez</td>\n",
-       "      <td>2.420659</td>\n",
+       "      <th>3</th>\n",
+       "      <td>elder</td>\n",
+       "      <td>2.079185</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>scott</td>\n",
-       "      <td>2.504201</td>\n",
+       "      <th>8</th>\n",
+       "      <td>haley</td>\n",
+       "      <td>2.147298</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>burgum</td>\n",
-       "      <td>2.595129</td>\n",
+       "      <td>2.416539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>scott</td>\n",
+       "      <td>2.601167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>christie</td>\n",
-       "      <td>2.685106</td>\n",
+       "      <td>2.615816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>suarez</td>\n",
+       "      <td>2.621951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ramaswamy</td>\n",
-       "      <td>3.208725</td>\n",
+       "      <td>3.131936</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -416,18 +416,18 @@
       ],
       "text/plain": [
        "     candidate      stdv\n",
-       "10       trump  0.957036\n",
-       "11    desantis  1.519398\n",
-       "1         hurd  1.725676\n",
-       "4        pence  1.897904\n",
-       "3        elder  1.944537\n",
-       "8        haley  2.057936\n",
-       "2   hutchinson  2.161254\n",
-       "9       suarez  2.420659\n",
-       "7        scott  2.504201\n",
-       "6       burgum  2.595129\n",
-       "5     christie  2.685106\n",
-       "0    ramaswamy  3.208725"
+       "10       trump  1.453520\n",
+       "11    desantis  1.649630\n",
+       "1         hurd  1.668547\n",
+       "4        pence  1.877580\n",
+       "2   hutchinson  2.007976\n",
+       "3        elder  2.079185\n",
+       "8        haley  2.147298\n",
+       "6       burgum  2.416539\n",
+       "7        scott  2.601167\n",
+       "5     christie  2.615816\n",
+       "9       suarez  2.621951\n",
+       "0    ramaswamy  3.131936"
       ]
      },
      "metadata": {},
@@ -436,14 +436,102 @@
    ],
    "source": [
     "stdvs = []\n",
-    "for candidate in reformattedData.columns:\n",
-    "    stdvs.append(statistics.stdev(reformattedData[candidate]))\n",
+    "for candidate in candidatePositions.columns:\n",
+    "    stdvs.append(statistics.stdev(candidatePositions[candidate]))\n",
     "    \n",
-    "stdvs = pd.DataFrame({'candidate':reformattedData.columns, 'stdv':stdvs})\n",
+    "stdvs = pd.DataFrame({'candidate':candidatePositions.columns, 'stdv':stdvs})\n",
     "\n",
     "# most agreement over Trump (going far), most disagreement on Ramaswamy (he's been positioned all over the place)\n",
-    "# also worth mentioning DeSantis, Hurd, Christie\n",
     "display(stdvs.sort_values('stdv'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dfef753",
+   "metadata": {},
+   "source": [
+    "# How did predictions fare?\n",
+    "### Hypothetical scenarios for now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "17eece03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.253164556962027\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3    19\n",
+       "1    16\n",
+       "2    15\n",
+       "Name: hurd, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Will Hurd was the first candidate to drop out. Just 20% of contestants accurately predicted that. \n",
+    "print(len(candidatePositions[candidatePositions['hurd'] == 1]) / len(df) * 100)\n",
+    "\n",
+    "# Although many others thought he would drop out 2nd or 3rd\n",
+    "display(candidatePositions['hurd'].value_counts().head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "efe060de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.538461538461538\n"
+     ]
+    }
+   ],
+   "source": [
+    "# With Tim Scott departing the race, just six candidates remain: Christie, Ramaswamy, Haley, Pence, DeSantis, and Trump\n",
+    "# just 12% of participants accurately predicted these individuals would be the final six candidates still running\n",
+    "print(len(candidatePositions[((candidatePositions['christie'] >= 7) & (candidatePositions['ramaswamy'] >= 7) & (candidatePositions['haley'] >= 7) & (candidatePositions['pence'] >= 7) & (candidatePositions['desantis'] >= 7) & (candidatePositions['trump'] >= 7))]) / n * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b58195c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33.33333333333333\n",
+      "46.15384615384615\n",
+      "87.17948717948718\n",
+      "97.43589743589743\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 33% predicted Haley would be in the final 4\n",
+    "print(len(candidatePositions[((candidatePositions['haley'] >= 9))]) / n * 100)\n",
+    "\n",
+    "print(len(candidatePositions[((candidatePositions['pence'] >= 9))]) / n * 100)\n",
+    "print(len(candidatePositions[((candidatePositions['desantis'] >= 9))]) / n * 100)\n",
+    "print(len(candidatePositions[((candidatePositions['trump'] >= 9))]) / n * 100)"
    ]
   }
  ],
