--- a/python/contest-scoring.ipynb
+++ b/python/contest-scoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 5,
    "id": "168105f1",
    "metadata": {},
    "outputs": [
@@ -33,9 +33,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
+       "      <th>78</th>\n",
        "      <td>Wisdom of the crowd</td>\n",
-       "      <td>hurd,elder,suarez,hutchinson,burgum,christie,s...</td>\n",
+       "      <td>hurd,elder,suarez,burgum,hutchinson,scott,chri...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -43,7 +43,7 @@
       ],
       "text/plain": [
        "       leaderboardAlias                                         prediction\n",
-       "49  Wisdom of the crowd  hurd,elder,suarez,hutchinson,burgum,christie,s..."
+       "78  Wisdom of the crowd  hurd,elder,suarez,burgum,hutchinson,scott,chri..."
       ]
      },
      "metadata": {},
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 10,
    "id": "4c8e11ca",
    "metadata": {
     "scrolled": true
@@ -113,13 +113,13 @@
        "10"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "averageOrder = ['hurd','elder','suarez','hutchinson','burgum','christie','scott','haley','ramaswamy','pence','desantis','trump']\n",
+    "averageOrder = ['hurd','elder','suarez','burgum','hutchinson','scott','christie','ramaswamy','haley','pence','desantis','trump']\n",
     "dropOutOrder = ['desantis', 'hurd', 'elder']\n",
     "\n",
     "partialScoring(dropOutOrder, averageOrder)"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 11,
    "id": "1505e62c",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 12,
    "id": "90ca10b3",
    "metadata": {},
    "outputs": [],
