first candidate has droppedgit add .

--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4f9d3be1",
    "metadata": {},
    "outputs": [],
@@ -127,27 +127,6 @@
     "display(averagePredictions)\n",
     "print(\"The 'Wisdom Of The Crowd' predicted drop out order is:\")\n",
     "display(averageOrder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "2cc50927",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add average answer to submissions\n",
-    "predictionStr = ''\n",
-    "for p in averageOrder:\n",
-    "    predictionStr += p + ','\n",
-    "\n",
-    "aggregateRow = {'leaderboardAlias':['Wisdom of the crowd'], 'prediction':[predictionStr]}\n",
-    "aggregateRow = pd.DataFrame(aggregateRow)\n",
-    "\n",
-    "\n",
-    "df = df.append(aggregateRow, ignore_index=True)\n",
-    "\n",
-    "df.to_csv(\"../2024/leaderboard/data/submissions2024.csv\", index=False)"
    ]
   },
   {
@@ -450,13 +429,12 @@
    "id": "9dfef753",
    "metadata": {},
    "source": [
-    "# How did predictions fare?\n",
-    "### Hypothetical scenarios for now"
+    "# How did predictions fare?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "17eece03",
    "metadata": {},
    "outputs": [
@@ -464,28 +442,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.253164556962027\n"
+      "24.050632911392405\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3    19\n",
-       "1    16\n",
-       "2    15\n",
-       "Name: hurd, dtype: int64"
+       "1    19\n",
+       "2    14\n",
+       "3    12\n",
+       "Name: suarez, dtype: int64"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.9620253164557\n"
+     ]
     }
    ],
    "source": [
-    "# Will Hurd was the first candidate to drop out. Just 20% of contestants accurately predicted that. \n",
-    "print(len(candidatePositions[candidatePositions['hurd'] == 1]) / len(df) * 100)\n",
+    "# Suarez was the first candidate to drop out. 24% of contestants accurately predicted that. \n",
+    "print(len(candidatePositions[candidatePositions['suarez'] == 1]) / len(df) * 100)\n",
     "\n",
     "# Although many others thought he would drop out 2nd or 3rd\n",
-    "display(candidatePositions['hurd'].value_counts().head(3))"
+    "display(candidatePositions['suarez'].value_counts().head(3))\n",
+    "\n",
+    "# 57% predicted he'd drop out in the first 3\n",
+    "print(len(candidatePositions[candidatePositions['suarez'] <= 3]) / len(df) * 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21b7b996",
+   "metadata": {},
+   "source": [
+    "### Hypothetical scenarios for now"
    ]
   },
   {
