--- a/python/contest-scoring.ipynb
+++ b/python/contest-scoring.ipynb
@@ -8,6 +8,53 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "[{'candidate': 'hurd', 'value': 2.08974358974359},\n",
+       " {'candidate': 'elder', 'value': 2.2564102564102564},\n",
+       " {'candidate': 'suarez', 'value': 2.730769230769231},\n",
+       " {'candidate': 'burgum', 'value': 3.3461538461538463},\n",
+       " {'candidate': 'hutchinson', 'value': 3.3846153846153846},\n",
+       " {'candidate': 'scott', 'value': 5.987179487179487},\n",
+       " {'candidate': 'christie', 'value': 6.256410256410256},\n",
+       " {'candidate': 'ramaswamy', 'value': 6.551282051282051},\n",
+       " {'candidate': 'haley', 'value': 6.576923076923077},\n",
+       " {'candidate': 'pence', 'value': 7.141025641025641},\n",
+       " {'candidate': 'desantis', 'value': 9.076923076923077},\n",
+       " {'candidate': 'trump', 'value': 10.602564102564102}]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 'Wisdom Of The Crowd' predicted drop out order is:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['hurd',\n",
+       " 'elder',\n",
+       " 'suarez',\n",
+       " 'burgum',\n",
+       " 'hutchinson',\n",
+       " 'scott',\n",
+       " 'christie',\n",
+       " 'ramaswamy',\n",
+       " 'haley',\n",
+       " 'pence',\n",
+       " 'desantis',\n",
+       " 'trump']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -93,15 +140,42 @@
     "    \n",
     "    return calculateKendallTauDistance(dropsWithPlaceHolders, predictionsWithPlaceHolders);\n",
     "\n",
-    "df = pd.read_csv(\"../2024/leaderboard/data/submissions2024.csv\")\n",
+    "df = pd.read_csv(\"../2024/leaderboard/data/submissions2024AllColumns.csv\")\n",
     "df = df[['leaderboardAlias', 'prediction']]\n",
+    "\n",
+    "## Calculate 'average' drop out position of each candidate\n",
+    "candidateScores = {}\n",
+    "for i in df.index:\n",
+    "    prediction = df['prediction'][i].split(\",\")[:-1]\n",
+    "    for i, candidate in enumerate(prediction):\n",
+    "        if candidate in candidateScores:\n",
+    "            candidateScores[candidate] += i\n",
+    "        else:\n",
+    "            candidateScores[candidate] = i\n",
+    "\n",
+    "averagePredictions = [{'candidate': key, 'value': candidateScores[key] / len(df)} for key in candidateScores.keys()]\n",
+    "averagePredictions.sort(key=lambda x: x['value'])\n",
+    "\n",
+    "averageOrder = [ap['candidate'] for ap in averagePredictions]\n",
+    "\n",
+    "display(averagePredictions)\n",
+    "print(\"The 'Wisdom Of The Crowd' predicted drop out order is:\")\n",
+    "display(averageOrder)\n",
+    "\n",
+    "# Add average answer to submissions\n",
+    "predictionStr = ''\n",
+    "for p in averageOrder:\n",
+    "    predictionStr += p + ','\n",
+    "aggregateRow = {'leaderboardAlias':['Wisdom of the crowd'], 'prediction':[predictionStr]}\n",
+    "aggregateRow = pd.DataFrame(aggregateRow)\n",
+    "df = df.append(aggregateRow, ignore_index=True)\n",
     "\n",
     "display(df.tail(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "4c8e11ca",
    "metadata": {
     "scrolled": true
@@ -110,30 +184,85 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "averageOrder = ['hurd','elder','suarez','burgum','hutchinson','scott','christie','ramaswamy','haley','pence','desantis','trump']\n",
-    "dropOutOrder = ['desantis', 'hurd', 'elder']\n",
+    "dropOutOrder = ['suarez']\n",
     "\n",
     "partialScoring(dropOutOrder, averageOrder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1505e62c",
+   "execution_count": 17,
+   "id": "298668f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>leaderboardAlias</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>round_1_score</th>\n",
+       "      <th>kendallDistance</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>round_1_rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>Wisdom of the crowd</td>\n",
+       "      <td>hurd,elder,suarez,burgum,hutchinson,scott,chri...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       leaderboardAlias                                         prediction  \\\n",
+       "78  Wisdom of the crowd  hurd,elder,suarez,burgum,hutchinson,scott,chri...   \n",
+       "\n",
+       "    round_1_score  kendallDistance  rank  round_1_rank  \n",
+       "78              2                2  34.0          34.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# create a column for every previous and current round, so we can track score over time\n",
-    "for i in range(0, len(averageOrder)):\n",
+    "for i in range(0, len(dropOutOrder)):\n",
     "    df['round_' + str(i+1) + '_score'] = 0\n",
     "    \n",
     "# create a column for most recent round's score\n",
@@ -142,20 +271,22 @@
     "# calc kendall distances for every previous round and the current round\n",
     "for i in df.index:\n",
     "    prediction = df['prediction'][i].split(\",\")[:-1]\n",
-    "    for round in range(0, len(averageOrder)):\n",
-    "        df['round_' + str(round+1) + '_score'][i] = partialScoring(averageOrder[:round+1], prediction)\n",
-    "    df['kendallDistance'][i] = partialScoring(averageOrder, prediction)\n",
+    "    for round in range(0, len(dropOutOrder)):\n",
+    "        df['round_' + str(round+1) + '_score'][i] = partialScoring(dropOutOrder[:round+1], prediction)\n",
+    "    df['kendallDistance'][i] = partialScoring(dropOutOrder, prediction)\n",
     "    \n",
     "# for every distance column, create a rank column\n",
     "df['rank'] = df['kendallDistance'].rank(method='min')\n",
     "\n",
-    "for i in range(0, len(averageOrder)):\n",
-    "    df['round_' + str(i+1) + '_rank'] = df['round_' + str(i+1) + '_score'].rank(method='min')"
+    "for i in range(0, len(dropOutOrder)):\n",
+    "    df['round_' + str(i+1) + '_rank'] = df['round_' + str(i+1) + '_score'].rank(method='min')\n",
+    "\n",
+    "display(df.tail(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "90ca10b3",
    "metadata": {},
    "outputs": [],
