--- a/python/contest-scoring.ipynb
+++ b/python/contest-scoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "168105f1",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "4c8e11ca",
    "metadata": {
     "scrolled": true
@@ -187,21 +187,21 @@
        "2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "averageOrder = ['hurd','elder','suarez','burgum','hutchinson','scott','christie','ramaswamy','haley','pence','desantis','trump']\n",
-    "dropOutOrder = ['suarez']\n",
+    "dropOutOrder = ['suarez', 'hurd']\n",
     "\n",
     "partialScoring(dropOutOrder, averageOrder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "298668f6",
    "metadata": {},
    "outputs": [
@@ -229,9 +229,11 @@
        "      <th>leaderboardAlias</th>\n",
        "      <th>prediction</th>\n",
        "      <th>round_1_score</th>\n",
+       "      <th>round_2_score</th>\n",
        "      <th>kendallDistance</th>\n",
        "      <th>rank</th>\n",
        "      <th>round_1_rank</th>\n",
+       "      <th>round_2_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -241,8 +243,10 @@
        "      <td>hurd,elder,suarez,burgum,hutchinson,scott,chri...</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>34.0</td>\n",
-       "      <td>34.0</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -252,8 +256,11 @@
        "       leaderboardAlias                                         prediction  \\\n",
        "78  Wisdom of the crowd  hurd,elder,suarez,burgum,hutchinson,scott,chri...   \n",
        "\n",
-       "    round_1_score  kendallDistance  rank  round_1_rank  \n",
-       "78              2                2  34.0          34.0  "
+       "    round_1_score  round_2_score  kendallDistance  rank  round_1_rank  \\\n",
+       "78              2              2                2  15.0          34.0   \n",
+       "\n",
+       "    round_2_rank  \n",
+       "78          15.0  "
       ]
      },
      "metadata": {},
@@ -286,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "90ca10b3",
    "metadata": {},
    "outputs": [],
