wrote analysis for Hurd

--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c717bac4",
    "metadata": {},
    "outputs": [],
@@ -57,25 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b181082d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'candidate': 'hurd', 'value': 2.08974358974359},\n",
-       " {'candidate': 'elder', 'value': 2.2564102564102564},\n",
-       " {'candidate': 'suarez', 'value': 2.730769230769231},\n",
-       " {'candidate': 'burgum', 'value': 3.3461538461538463},\n",
-       " {'candidate': 'hutchinson', 'value': 3.3846153846153846},\n",
-       " {'candidate': 'scott', 'value': 5.987179487179487},\n",
-       " {'candidate': 'christie', 'value': 6.256410256410256},\n",
-       " {'candidate': 'ramaswamy', 'value': 6.551282051282051},\n",
-       " {'candidate': 'haley', 'value': 6.576923076923077},\n",
-       " {'candidate': 'pence', 'value': 7.141025641025641},\n",
-       " {'candidate': 'desantis', 'value': 9.076923076923077},\n",
-       " {'candidate': 'trump', 'value': 10.602564102564102}]"
+       "[{'candidate': 'hurd', 'value': 2.0632911392405062},\n",
+       " {'candidate': 'elder', 'value': 2.240506329113924},\n",
+       " {'candidate': 'suarez', 'value': 2.721518987341772},\n",
+       " {'candidate': 'burgum', 'value': 3.3417721518987342},\n",
+       " {'candidate': 'hutchinson', 'value': 3.392405063291139},\n",
+       " {'candidate': 'scott', 'value': 5.974683544303797},\n",
+       " {'candidate': 'christie', 'value': 6.253164556962025},\n",
+       " {'candidate': 'ramaswamy', 'value': 6.556962025316456},\n",
+       " {'candidate': 'haley', 'value': 6.594936708860759},\n",
+       " {'candidate': 'pence', 'value': 7.1645569620253164},\n",
+       " {'candidate': 'desantis', 'value': 9.08860759493671},\n",
+       " {'candidate': 'trump', 'value': 10.60759493670886}]"
       ]
      },
      "metadata": {},
@@ -146,9 +146,9 @@
     {
      "data": {
       "text/plain": [
-       "suarez    24.358974\n",
-       "elder     21.794872\n",
-       "hurd      20.512821\n",
+       "suarez    24.050633\n",
+       "hurd      21.518987\n",
+       "elder     21.518987\n",
        "Name: 1, dtype: float64"
       ]
      },
@@ -158,9 +158,9 @@
     {
      "data": {
       "text/plain": [
-       "elder     23.076923\n",
-       "hurd      19.230769\n",
-       "suarez    17.948718\n",
+       "elder     24.050633\n",
+       "hurd      18.987342\n",
+       "suarez    17.721519\n",
        "Name: 2, dtype: float64"
       ]
      },
@@ -170,9 +170,9 @@
     {
      "data": {
       "text/plain": [
-       "hurd      24.358974\n",
-       "elder     15.384615\n",
-       "burgum    14.102564\n",
+       "hurd      24.050633\n",
+       "suarez    15.189873\n",
+       "elder     15.189873\n",
        "Name: 3, dtype: float64"
       ]
      },
@@ -182,9 +182,9 @@
     {
      "data": {
       "text/plain": [
-       "desantis     41.025641\n",
-       "ramaswamy    16.666667\n",
-       "trump        12.820513\n",
+       "desantis     41.772152\n",
+       "ramaswamy    16.455696\n",
+       "trump        12.658228\n",
        "Name: 11, dtype: float64"
       ]
      },
@@ -194,9 +194,9 @@
     {
      "data": {
       "text/plain": [
-       "trump        82.051282\n",
-       "desantis     10.256410\n",
-       "ramaswamy     2.564103\n",
+       "trump        82.278481\n",
+       "desantis     10.126582\n",
+       "ramaswamy     2.531646\n",
        "Name: 12, dtype: float64"
       ]
      },
@@ -474,6 +474,50 @@
     "\n",
     "# 57% predicted he'd drop out in the first 3\n",
     "print(len(candidatePositions[candidatePositions['suarez'] <= 3]) / len(df) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9cd97d0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.9873417721519\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3    19\n",
+       "1    17\n",
+       "2    15\n",
+       "Name: hurd, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64.55696202531645\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hurd was the second candidate to drop out. 19% of contestants accurately predicted that. \n",
+    "print(len(candidatePositions[candidatePositions['hurd'] == 2]) / len(df) * 100)\n",
+    "\n",
+    "# Although many others thought he would drop out first three\n",
+    "display(candidatePositions['hurd'].value_counts().head(3))\n",
+    "\n",
+    "# 64% predicted he'd drop out in the first 3\n",
+    "print(len(candidatePositions[candidatePositions['hurd'] <= 3]) / len(df) * 100)"
    ]
   },
   {
